--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<script type="text/template" data-template="attend-col">
 			<td class="attend-col" data-id={{id}}><input type="checkbox"></td>
 	</script>
-	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/app.js"></script>
 	
 </body>
